[gd_scene load_steps=8 format=2]

[ext_resource path="res://TestButton.gd" type="Script" id=1]
[ext_resource path="res://animation_fading.gd" type="Script" id=2]
[ext_resource path="res://Assets/MBGLS580.fbx" type="PackedScene" id=3]
[ext_resource path="res://CameraController.gd" type="Script" id=4]
[ext_resource path="res://Assets/road/road.obj" type="ArrayMesh" id=5]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_to_normal_2"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="Spatial" type="Spatial"]

[node name="CenterPoint" type="Position3D" parent="."]

[node name="Control" type="Control" parent="CenterPoint"]
margin_right = 1026.0
margin_bottom = 596.0

[node name="Button" type="Button" parent="CenterPoint/Control"]
margin_left = 194.0
margin_top = 15.0
margin_right = 343.0
margin_bottom = 42.0
text = "Click Here"
script = ExtResource( 1 )

[node name="HTTPRequest" type="HTTPRequest" parent="CenterPoint/Control/Button"]

[node name="Label" type="Label" parent="CenterPoint/Control"]
margin_left = 17.0
margin_top = 17.0
margin_right = 282.0
margin_bottom = 71.0
text = "Enter Text Here"

[node name="MBGLS580" parent="CenterPoint" instance=ExtResource( 3 )]
transform = Transform( -0.4, 0, -3.49691e-08, 0, 0.4, 0, 3.49691e-08, 0, -0.4, 0.675292, 0, -1.21432 )

[node name="Spawns" type="Position3D" parent="CenterPoint"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
anims/RESET = SubResource( 1 )
anims/fade_to_normal_2 = SubResource( 2 )

[node name="BackButton" type="Button" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -222.0
margin_top = -64.0
margin_right = -125.0
margin_bottom = -25.0
text = "Front Camera"

[node name="FrontButton" type="Button" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -219.0
margin_top = -114.0
margin_right = -125.0
margin_bottom = -75.0
text = "Back Camera"

[node name="LeftButton" type="Button" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -115.0
margin_top = -64.0
margin_right = -21.0
margin_bottom = -25.0
text = "Left Camera"

[node name="RightButton" type="Button" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -115.0
margin_top = -114.0
margin_right = -19.0
margin_bottom = -75.0
text = "Right Camera"

[node name="CameraController" type="Node" parent="."]
script = ExtResource( 4 )

[node name="FrontCamera" type="Camera" parent="CameraController"]
transform = Transform( 1, 0, 0, 0, 0.921897, 0.387435, 0, -0.387435, 0.921897, 0, 1.28235, 1.57129 )

[node name="BackCamera" type="Camera" parent="CameraController"]
transform = Transform( -1, 3.38707e-08, -8.05948e-08, 0, 0.921897, 0.387435, 8.74228e-08, 0.387435, -0.921897, 0, 1.28235, -0.862872 )

[node name="RightCamera" type="Camera" parent="CameraController"]
transform = Transform( -4.37114e-08, 0.387435, -0.921897, 0, 0.921897, 0.387435, 1, 1.69353e-08, -4.02974e-08, -2, 1.5, 0.5 )

[node name="LeftCamera" type="Camera" parent="CameraController"]
transform = Transform( -4.37114e-08, -0.374607, 0.927184, 0, 0.927184, 0.374607, -1, 1.63746e-08, -4.05285e-08, 2, 1.5, 0.5 )

[node name="road" type="MeshInstance" parent="."]
transform = Transform( 0.596322, 0, 0, 0, 1, 0, 0, 0, 30, 0, -0.0888808, -3.66433 )
mesh = ExtResource( 5 )
material/0 = null

[node name="SpawnR1" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.7, 0, -3.5 )

[node name="SpawnR2" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.7, 0, -10 )

[node name="SpawnR3" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.7, 0, -18 )

[node name="SpawnL1" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.7, 0, -3.5 )

[node name="SpawnL2" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.7, 0, -10 )

[node name="SpawnL3" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.7, 0, -18 )

[connection signal="pressed" from="CenterPoint/Control/Button" to="CenterPoint/Control/Button" method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/BackButton" to="CameraController" method="_on_BackButton_pressed"]
[connection signal="pressed" from="CanvasLayer/FrontButton" to="CameraController" method="_on_FrontButton_pressed"]
[connection signal="pressed" from="CanvasLayer/LeftButton" to="CameraController" method="_on_LeftButton_pressed"]
[connection signal="pressed" from="CanvasLayer/RightButton" to="CameraController" method="_on_RightButton_pressed"]
